# Computer-vision

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  netlify.toml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
docs/: AGROVISION_DECISION_SUPPORT_ARCHITECTURE.md  (+2 more)
scripts/: common.ps1  (+11 more)
services/api/: conftest.py  pyproject.toml
services/api/app/: __init__.py  analysis.py  assistant.py  calibration.py  case_guidance.py  config.py  crop_knowledge.py  diagnosis_evidence.py  diseases.py  main.py  market.py  model_runtime.py  persistence.py  reports.py  schemas.py  target_spot.py  treatment_prices.py  treatments.py  vision_llm.py  weather.py  yield_model.py
services/api/app/adapters/: __init__.py  case_repository.py
services/api/app/api/: cases.py
services/api/app/application/: __init__.py  area_ranges.py  case_service.py  cost_benefit.py  image_diagnosis.py  policies.py  prices.py  question_engine.py  scenarios.py  severity.py
services/api/app/contracts/: __init__.py  cases.py
services/api/app/domain/: __init__.py  case_state.py
services/api/app/knowledge/: __init__.py  egypt_sources.py  tomato_statistics.py  treatment_rules.py
services/api/tests/: test_analysis.py  test_assistant.py  test_calibration.py  test_cases_v1.py  test_fixes_v2.py  test_forms_free_report.py  test_honesty_contract.py  test_market.py  test_model_runtime.py  test_model_smoke.py  test_multicrop.py  test_persistence.py  test_phases.py  test_target_spot_evidence.py  test_treatment_catalog_endpoint.py  test_treatment_rules.py  test_vision_fusion.py  test_weather.py
(+81 files in other folders)
