[project]
name = "agrovision-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "pydantic-settings>=2.8,<3",
  "numpy>=1.26,<3",
  "Pillow>=10.4,<12",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2",
  "reportlab>=4.2,<5",
  "psutil>=6,<8",
  "httpx>=0.27,<1"
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.20,<2"]
training = [
  "torch>=2.5,<3",
  "torchvision>=0.20,<1",
  "onnx>=1.17,<2"
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:"
]
